--- a/middle_end/flambda/BUILD.bazel
+++ b/middle_end/flambda/BUILD.bazel
@@ -733,7 +733,8 @@ bootstrap_module(
         ## (Debuginfo)
         ## (Closure_id)
         ## (Clflags)
-    ]
+    ],
+    visibility = ["//driver:__pkg__"]
 )
 
 bootstrap_signature(
